[gd_scene load_steps=9 format=2]

[ext_resource path="res://Bomb/fx-2.png" type="Texture" id=1]
[ext_resource path="res://Bomb/bomb.png" type="Texture" id=2]
[ext_resource path="res://Bomb/Bomb.gd" type="Script" id=3]
[ext_resource path="res://Bomb/Explosion1.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 11.1645

[sub_resource type="CircleShape2D" id=2]
radius = 170.926

[sub_resource type="CircleShape2D" id=3]
radius = 16.119

[sub_resource type="Animation" id=4]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[node name="Bomb" type="KinematicBody2D" groups=[
"bomb",
]]
script = ExtResource( 3 )

[node name="bomb" type="Sprite" parent="."]
scale = Vector2( 1.47707, 1.47707 )
texture = ExtResource( 2 )

[node name="explosion" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.862745 )
scale = Vector2( 5.06258, 5.06258 )
texture = ExtResource( 1 )
hframes = 6
frame = 5

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource( 2 )

[node name="CollisionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionRadius"]
shape = SubResource( 3 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 4 )

[node name="ExplosionPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SelfDestruct" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="CollisionRadius" to="." method="_on_CollisionRadius_body_entered"]
[connection signal="timeout" from="SelfDestruct" to="." method="_on_SelfDestruct_timeout"]
